--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
                     </div>
                     <ul class="product-controls">
                         <li data-filter="*">All</li>
-                        {% for category in categories %}
+                        {% for category in featured_categories %}
                         <li data-filter=".{{category.slug}}">{{category.title | title}}</li>
                         {% endfor %}
                     </ul>
@@ -28,12 +28,12 @@
             </div>
         </div>
         <div class="row" id="product-list">
-            {% for category in categories %}
+            {% for category in featured_categories %}
             {% for product in category.products.all %}
             <div class="col-lg-3 col-sm-6 mix {{category.slug}}">
                 <div class="single-product-item">
                     <figure>
-                        <a href="{% url 'product-details' product.slug %}"><img style="height:320px ;" src="{{product.thumbnail}}" alt=""></a>
+                        <a href="{% url 'product-details' product.slug %}"><img style="height:180px ;" src="{{product.thumbnail}}" alt=""></a>
                         {% comment %} <div class="p-status">new</div> {% endcomment %} 
                     </figure>
                     <div class="product-text">
@@ -67,7 +67,7 @@
             <div class="col-lg-3 col-sm-6 mix ">
                 <div class="single-product-item">
                     <figure>
-                        <a href="{% url 'product-details' product.slug %}"><img style="height:320px ;" src="{{product.thumbnail}}" alt=""></a>
+                        <a href="{% url 'product-details' product.slug %}"><img style="height:180px ;" src="{{product.thumbnail}}" alt=""></a>
                         
                     </figure>
                     <div class="product-text">
