--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -10,17 +10,27 @@
         <div class="row">
             <div class="col-lg-4">
                 <div class="page-breadcrumb">
+                    {% if cart %}
                     <h3>Cart({{cart|length}})</h3>
+                    {% endif %}
                 </div>
             </div> 
         </div>
     </div>
 </section>
 <!-- Page Add Section End -->
-
+{% if cart %}
+<div class="cart-page">
 <!-- Cart Page Section Begin -->
 <div class="cart-page">
     <div class="container">
+        <div class="row py-2">
+            <div class="col-md-12">
+                 {% if messages %}
+                 {% include '../message.html' %}
+                 {% endif %}
+            </div>
+        </div>
         <div class="cart-table">
             <table>
                 <thead>
@@ -45,17 +55,19 @@
                         <td class="price-col">{{product.price|floatformat:"2"}}</td>
                         <td class="quantity-col">
                             <div class="pro-qty">
-                                <a href="?product_id = {{product.id}}&&quantity=-1">
+                                <a href="?product_id ={{product.id}}&&quantity=-1">
                                     <span class="dec qtybtn">-</span>
                                 </a>
                                 <input disabled text="text" value="{{item.quantity}}">
-                                <a href="?product_id = {{product.id}}&&quantity=+1">
+                                <a href="?product_id ={{product.id}}&&quantity=+1">
                                     <span class="inc qtybtn">+</span>
                                 </a>
                             </div>
                         </td>
                         <td class="total">{{item.subtotal|floatformat:"2"}}</td>
-                        <td class="product-close">x</td>
+                        <td class="product-close">
+                            <a class="text-decoration-none text-dark" herf="?product_id ={{product.id}}&&quantity=-{{item.quantity}}">X</a>
+                        </td>
                     </tr>
                     {% endwith %}
                     {% endfor %}
@@ -70,11 +82,26 @@
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-1 text-left text-lg-right">
-                    <div class="site-btn clear-btn">Clear Cart</div>
+                    <div class="site-btn clear-btn">
+                        <a class="text-decoration-none text-dark" herf="?clear=true">
+                            Clear Cart
+                        </a>
+                    </div>
+                    <div class="site-btn clear-btn">
+                        <a class="text-decoration-none text-dark" herf="#">
+                            Checkout
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
+{% else %}
+<div class="cart-page">
+    <div class="container">
+        {% include '../no-cart.html' %}
+    </div>
+</div>
+{% endif %}
 {% endblock content %}
