--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -38,7 +38,7 @@
                         <th class="product-h">Product</th>
                         <th>Price</th>
                         <th class="quan">Quantity</th>
-                        <th>Total</th>
+                        <th>Subtotal</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -47,7 +47,7 @@
                     {% with product=item.product %}
                     <tr>
                         <td class="product-col">
-                            <img src="{{product.thumbnail}}" alt="">
+                            <img style="height:100px; " src="{{product.thumbnail}}" alt="">
                             <div class="p-title">
                                 <h5>{{product.title}}</h5>
                             </div>
@@ -73,13 +73,20 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <hr>
+            <h4 class="text-center"> 
+                <strong>Total = </strong>{{cart.total}}
+            </h4>
         </div>
         <div class="cart-btn">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="coupon-input">
-                        <input type="text" placeholder="Enter cupone code">
-                    </div>
+                    <form action="{% url 'add-coupon' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="coupon-input">
+                            <input name="coupon" type="text" placeholder="Enter cupone code">
+                        </div>
+                    </form>
                 </div>
                 <div class="col-lg-5 offset-lg-1 text-left text-lg-right">
                     <div class="site-btn clear-btn">
