cart info and coupon fixed

--- a/templates/header.html
+++ b/templates/header.html
@@ -39,7 +39,7 @@
                         <ul class="sub-menu">
                             
                             <li><a href="{% url 'logout' %}">Logout</a></li>
-                            <li><a href="{% url 'checkout' %}">Order</a></li>
+                            <li><a href="{% url 'logout' %}">Order</a></li>
                             <li><a href="{% url 'change_password' %}">Change password</a></li>
                             
                         </ul>
