worked on checkout page(add dilevery chg func) and other code snippt

--- a/templates/order/checkout.html
+++ b/templates/order/checkout.html
@@ -146,11 +146,11 @@
                         </div>
                         <div class="cart-item">
                             <span>Shipping</span>
-                            <p>$10</p>
+                            <p id="charge-amount">0</p>
                         </div>
                         <div class="cart-total">
                             <span>Total</span>
-                            <p>$39</p>
+                            <p>{{ total_cost }}</p>
                         </div>
                     </div>
                 </div>
@@ -177,5 +177,33 @@
         
     </div>
 </section>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const deliveryCharges = {
+            'Dhaka': 200.00,
+            'Chittagong': 300.00,
+            'Rajshahi': 300.00,
+            'Khulna': 300.00,
+            'Barisal': 300.00,
+            'Sylhet': 300.00,
+            'Rangpur': 300.00,
+            'Mymensingh': 300.00
+        };
+
+        document.getElementById('division').addEventListener('change', function() {
+            const selectedDivision = this.value;
+            const deliveryChargeDisplay = document.getElementById('charge-amount');
+
+            console.log('Selected Division:', selectedDivision);  // Debugging line
+
+            if (selectedDivision in deliveryCharges) {
+                deliveryChargeDisplay.textContent = deliveryCharges[selectedDivision].toFixed(2);
+            } else {
+                deliveryChargeDisplay.textContent = '0.00';
+            }
+        });
+    });
+</script>
+
 
 {% endblock content %}
